Fixed links alignment in homepage

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -606,6 +606,10 @@ footer,
         width: 83.33%;
     }
 
+    .desktop {
+        display: block;
+    }
+
     .hero {
         .column-half {
             h3 {
@@ -626,6 +630,10 @@ footer,
 
     .site-header {
         min-height: 120px;
+    }
+
+    .text-center {
+        text-align: center;
     }
 
     // Headings
@@ -659,6 +667,10 @@ footer,
     h6 {
         font-size: 12px;
         line-height: 16px;
+    }
+
+    .heading-sibiling {
+        padding-top: 24px;
     }
 
     // Cards
